content/docs/0.16.x/reference/cli/commands/keptn_update_project.md
---
date: "2022-07-11T09:30:42+02:00"
title: "keptn update project"
slug: keptn_update_project
---
## keptn update project

Updates an existing Keptn project

### Synopsis

Updates an existing Keptn project with the provided name. 

Updating a shipyard file is not possible.

By executing the update project command, Keptn will add the provided upstream repository to the existing internal Git repository that is used to maintain all project-related resources. 
To upstream this internal Git repository to a remote repository and the remote URL (*--git-remote-url*) are required
together with private key (*--git-private-key*) or access token (*--git-token*). The Git user (--git-user) can be added if required. For using proxy please specify proxy IP address together with port (*--git-proxy-url*) and
used scheme (*--git-proxy-scheme=*) to connect to proxy. Please be aware that authentication with public/private key and via proxy is 
supported only when using resource-service.

For more information about updating projects or upstream repositories, please go to [Manage Keptn](https://v1.keptn.sh/docs/0.16.x/manage/)


```
keptn update project PROJECTNAME --git-user=GIT_USER --git-token=GIT_TOKEN --git-remote-url=GIT_REMOTE_URL [flags]
```

### Examples

```
keptn update project PROJECTNAME --git-token=GIT_TOKEN --git-remote-url=GIT_REMOTE_URL

or (if the git repo requires user)

keptn update project PROJECTNAME --git-user=GIT_USER --git-token=GIT_TOKEN --git-remote-url=GIT_REMOTE_URL

or (only for resource-service)

keptn update project PROJECTNAME --git-user=GIT_USER --git-remote-url=GIT_REMOTE_URL --git-private-key=PRIVATE_KEY_PATH --git-private-key-pass=PRIVATE_KEY_PASSPHRASE

or (only for resource-service)

keptn update project PROJECTNAME --git-user=GIT_USER --git-remote-url=GIT_REMOTE_URL --git-token=GIT_TOKEN --git-proxy-url=PROXY_IP --git-proxy-scheme=SCHEME --git-proxy-user=PROXY_USER --git-proxy-password=PROXY_PASS --insecure-skip-tls
```

### Options

```
  -g, --git-pem-certificate string    The git PEM Certificate file
  -k, --git-private-key string        The SSH git private key of the git user
  -l, --git-private-key-pass string   The passphrase of git private key
  -e, --git-proxy-password string     The git proxy password
  -j, --git-proxy-scheme string       The git proxy scheme
  -p, --git-proxy-url string          The git proxy URL and port
  -w, --git-proxy-user string         The git proxy user
  -r, --git-remote-url string         The remote url of the upstream target
  -t, --git-token string              The git token of the git user
  -u, --git-user string               The git user of the upstream target
  -x, --insecure-skip-tls             Disable TLS verification to allow connections to servers using self signed certificates
```

### Options inherited from parent commands

```
      --config-file string   Specify custom Keptn Config file path (default: ~/.keptn/config)
  -h, --help                 help
      --mock                 Disables communication to a Keptn endpoint
  -n, --namespace string     Specify the namespace where Keptn should be installed, used and uninstalled in (default "keptn")
  -q, --quiet                Suppresses debug and info messages
  -v, --verbose              Enables verbose logging to print debug messages
  -y, --yes                  Assume yes for all user prompts
```

### SEE ALSO

* [keptn update](../keptn_update/)	 - Updates an existing Keptn project

###### Auto generated by spf13/cobra on 11-Jul-2022
